--- a/app/app.css
+++ b/app/app.css
@@ -1,8 +1,8 @@
 @import "tailwindcss";
 
 @theme {
-  --font-sans: "Inter", ui-sans-serif, system-ui, sans-serif,
-    "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
+  --font-sans: "Inter", ui-sans-serif, system-ui, sans-serif, "Apple Color Emoji", "Segoe UI Emoji",
+    "Segoe UI Symbol", "Noto Color Emoji";
 }
 
 html,
@@ -13,3 +13,28 @@ body {
     color-scheme: dark;
   }
 }
+
+.upload-wrapper .uploadzone .success {
+  display: none;
+}
+
+.upload-wrapper:hover .uploadzone {
+  border: 2px dashed #1abc9c;
+}
+
+.upload-wrapper input[type="file"]:valid + .uploadzone {
+  border-color: #1abc9c;
+}
+
+.upload-wrapper input[type="file"]:valid + .uploadzone .success {
+  display: inline-block;
+}
+
+.upload-wrapper input[type="file"]:valid + .uploadzone .default {
+  display: none;
+}
+
+/* input[type="radio"]:checked ~ label {
+  background-color: #0d9488;
+  color: white;
+} */
